# loki_ui

./: Cargo.toml  README.md  docker-compose.yml  flake.nix  loki-config.yaml  loki.yaml
.direnv/: flake-profile-1-link  flake-profile-2-link
src/: lib.rs  loki.rs  main.rs
src/loki/: error.rs  mod.rs  types.rs
src/ui/: mod.rs
src/ui/screen/: alert.rs  mod.rs  query.rs  remove.rs  settings.rs
tests/: integration_test.rs
