[package]
name = "loki_ui"
version = "0.1.4"
edition = "2021"
description = "A simple tui for grafana loki"
license = "GPL-3.0"
keywords = ["loki", "grafana", "tui"]
repository = "https://github.com/2000Slash/loki_ui"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#loki
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
loki-api = "0.1.1"
snap = "1.1.1"
chrono = "0.4.33"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"

#tui
ratatui = "0.25.0"
crossterm = "0.27.0"
tui-textarea = "0.4.0"

#debugging
tui-logger = { version = "0.10.1", optional = true }
log = "0.4.20"
color-eyre = { version = "0.6.2", default-features = false, optional = true }

#general
confy = "0.6.0"
envy = "0.4.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
debug = ["dep:tui-logger", "dep:color-eyre"]
default = []

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"